--- a/src/pages/account.f7.html
+++ b/src/pages/account.f7.html
@@ -3,7 +3,12 @@
   <div class="navbar">
     <div class="navbar-bg"></div>
     <div class="navbar-inner sliding">
-      <div class="title">Instagram Feeds</div>
+      <div class="left">
+        <a href="#">
+          <i class="icon f7-icons padding-left">person_alt_circle</i>
+        </a>
+      </div>
+      <div class="title">Developer</div>
       <div class="right">
         <a href="/keranjang/" class="link icon-only tab-link">
           <i class="icon f7-icons">cart<span class="badge color-red cart-label" style="display: none;">0</span></i>
