--- a/src/pages/feeds.f7.html
+++ b/src/pages/feeds.f7.html
@@ -128,6 +128,10 @@
             return false;
         }
       },
+      toolbarBottomShow: function() {
+        let $$ = this.$$;
+        $$('.toolbar-main').show();
+      },
     },
     // Page Events
     on: {
@@ -139,6 +143,10 @@
       },
       pageBeforeIn: function(e, page) {
         console.log('pageBeforeIn', page);
+
+        // show toolbar again when toolbar hide by other menu
+        this.toolbarBottomShow();
+
       },
       pageAfterIn: function(e, page) {
         console.log('pageAfterIn', page);
