halaman inbox show avatar & show kolom textarea

--- a/src/app.f7.html
+++ b/src/app.f7.html
@@ -57,7 +57,7 @@
             <!-- Label text -->
             <span class="tabbar-label">Join Reseller</span>
           </a>
-          <a href="/inbox/" class="tab-link">
+          <a href="#view-inbox" class="tab-link">
           <!-- <a href="#view-inbox" class="tab-link"> -->
             <i class="icon f7-icons">envelope_fill</i>
             <!-- Label text -->
@@ -91,9 +91,9 @@
       </div>
 
       <!-- inbox View -->
-      <!-- <div id="view-inbox" class="view view-init tab" data-name="inbox" data-url="/inbox/"> -->
+      <div id="view-inbox" class="view view-init tab" data-name="inbox" data-url="/inbox/">
         <!-- inbox page will be loaded here dynamically from /inbox/ route -->
-      <!-- </div> -->
+      </div>
 
       <!-- akun View -->
       <div id="view-akun" class="view view-init tab" data-name="akun" data-url="/akun/">
