--- a/src/pages/inbox.f7.html
+++ b/src/pages/inbox.f7.html
@@ -4,9 +4,8 @@
       <div class="navbar-bg"></div>
       <div class="navbar-inner sliding">
         <div class="left">
-          <a href="#" class="link back">
-            <i class="icon icon-back"></i>
-            <span class="if-not-md">Back</span>
+          <a href="#">
+            <img class="padding-left" src="static/icons/icon.png" alt="">
           </a>
         </div>
         <div class="title">Inbox</div>
@@ -17,116 +16,36 @@
         </div>
       </div>
     </div>
-    <div class="toolbar messagebar">
+    <div class="toolbar messagebar" style="bottom: 60px">
       <div class="toolbar-inner">
         <div class="messagebar-area">
           <textarea class="resizable" placeholder="Message"></textarea>
-        </div><a class="link send-link" href="#">Send</a>
+        </div><a class="link send-link" href="#"><i class="icon f7-icons" style="transform: rotate(45deg);">paperplane_fill</i></a>
       </div>
     </div>
-    <div class="page-content">
+    <div class="page-content messages-content">
       <div class="messages">
-        <!-- Messages title -->
-        <div class="messages-title"><b>Sunday, Feb 9,</b> 12:58</div>
         <!-- Full layout sent message -->
         <div class="message message-sent">
-          <div class="message-avatar" style="background-image:url(https://cdn.framework7.io/placeholder/people-100x100-7.jpg);"></div>
+          <div class="message-avatar" style="opacity:1"><i class="icon f7-icons">person_alt_circle</i></div>
           <div class="message-content">
             <div class="message-name">John Doe</div>
-            <div class="message-header">Message header</div>
+            <div class="message-header">23-10-2020 11:00</div>
             <div class="message-bubble">
               <div class="message-text-header">Text header</div>
               <div class="message-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-              <div class="message-text-footer">Text footer</div>
             </div>
-            <div class="message-footer">Message footer</div>
           </div>
         </div>
         <!-- Full layout received message -->
         <div class="message message-received">
-          <div class="message-avatar" style="background-image:url(https://cdn.framework7.io/placeholder/people-100x100-7.jpg);"></div>
+          <div class="message-avatar" style="background-image:url(static/icons/icon.png);opacity:1;background-color: #ddd"></div>
           <div class="message-content">
             <div class="message-name">John Doe</div>
-            <div class="message-header">Message header</div>
+            <div class="message-header">23-10-2020 11:05</div>
             <div class="message-bubble">
               <div class="message-text-header">Text header</div>
               <div class="message-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-              <div class="message-text-footer">Text footer</div>
-            </div>
-            <div class="message-footer">Message footer</div>
-          </div>
-        </div>
-        <!-- Messages -->
-        <div class="message message-sent">
-          <div class="message-content">
-            <div class="message-bubble">
-              <div class="message-text">Hi, Kate</div>
-            </div>
-          </div>
-        </div>
-        <div class="message message-sent">
-          <div class="message-content">
-            <div class="message-bubble">
-              <div class="message-text">How are you?</div>
-            </div>
-          </div>
-        </div>
-        <div class="message message-received">
-          <div class="message-avatar" style="background-image:url(https://cdn.framework7.io/placeholder/people-100x100-9.jpg);"></div>
-          <div class="message-content">
-            <div class="message-name">Kate</div>
-            <div class="message-bubble">
-              <div class="message-text">Hi, I am good!</div>
-            </div>
-          </div>
-        </div>
-        <div class="message message-received">
-          <div class="message-avatar" style="background-image:url(https://cdn.framework7.io/placeholder/people-100x100-7.jpg);"></div>
-          <div class="message-content">
-            <div class="message-name">Blue Ninja</div>
-            <div class="message-bubble">
-              <div class="message-text">Hi there, I am also fine, thanks! And how are you?</div>
-            </div>
-          </div>
-        </div>
-        <div class="message message-sent">
-          <div class="message-content">
-            <div class="message-bubble">
-              <div class="message-text">Hey, Blue Ninja! Glad to see you ;)</div>
-            </div>
-          </div>
-        </div>
-        <div class="message message-sent">
-          <div class="message-content">
-            <div class="message-bubble">
-              <div class="message-text">Hey, look, cutest kitten ever!</div>
-            </div>
-          </div>
-        </div>
-        <div class="message message-received">
-          <div class="message-avatar" style="background-image:url(https://cdn.framework7.io/placeholder/people-100x100-9.jpg);"></div>
-          <div class="message-content">
-            <div class="message-name">Kate</div>
-            <div class="message-bubble">
-              <div class="message-text">Nice!</div>
-            </div>
-          </div>
-        </div>
-        <div class="message message-received">
-          <div class="message-avatar" style="background-image:url(https://cdn.framework7.io/placeholder/people-100x100-9.jpg);"></div>
-          <div class="message-content">
-            <div class="message-name">Kate</div>
-            <div class="message-bubble">
-              <div class="message-text">Like it very much!</div>
-            </div>
-          </div>
-        </div>
-        <div class="message message-received">
-          <div class="message-avatar" style="background-image:url(https://cdn.framework7.io/placeholder/people-100x100-7.jpg);"></div>
-          <div class="message-content">
-            <div class="message-name">Blue Ninja</div>
-            <div class="message-bubble">
-              <div class="message-text">Awesome!</div>
             </div>
           </div>
         </div>
@@ -246,15 +165,22 @@
           let $$ = this.$$;
           $$('.toolbar-main').hide();
         },
+        toolbarBottomShow: function() {
+          let $$ = this.$$;
+          $$('.toolbar-main').show();
+        },
       },
       // Page Events
       on: {
         pageMounted: function(e, page) {
           console.log('pageMounted', page);
-          this.toolbarBottomHide();
+          // this.toolbarBottomHide();
         },
         pageInit: function(e, page) {
           console.log('pageInit', page);
+
+          // show toolbar again when toolbar hide by other menu
+          this.toolbarBottomShow();
         },
         pageBeforeIn: function(e, page) {
           console.log('pageBeforeIn', page);
