--- a/src/pages/account.f7.html
+++ b/src/pages/account.f7.html
@@ -17,14 +17,41 @@
     </div>
   </div>
   <div class="page-content">
-    <div class="block-title">Informasi akun</div>
+    <!-- <div class="block-title">Informasi akun</div> -->
     <div class="card">
-      <div class="card-content">
-        <div class="list media-list">
-          <ul>
-          </ul>
+      <div class="card-header"><a href="/pesanan#selesai  " class="link text-color-black" style="font-size: 13px;"><i class="icon f7-icons" >square_list</i> Pesanan Saya</a><a href="/pesanan#selesai" class="link text-color-black" style="font-size: 13px;">Lihat Riwayat Pesanan <i class="icon f7-icons padding-top-half" style="font-size: 12px;">chevron_right</i></a></div>
+      <div class="card-content card-content-padding">
+        <div class="row">
+          <a href="/pesanan#belum-bayar" class="col" style="display: grid;">
+            <i class="icon f7-icons" style="width: auto;"><img class="" src="static/icons/wallet.png" alt=""></i>
+            <span class="padding-top-half text-align-center text-color-gray" style="font-size: 12px;">Belum Bayar</span>
+          </a>
+          <a href="/pesanan#dikemas" class="col" style="display: grid;">
+            <i class="icon f7-icons" style="width: auto;"><img class="" src="static/icons/box.png" alt=""></i>
+            <span class="padding-top-half text-align-center text-color-gray" style="font-size: 12px;">Dikemas</span>
+          </a>
+          <a href="/pesanan#dikirim" class="col" style="display: grid;">
+            <i class="icon f7-icons" style="width: auto;"><img class="" src="static/icons/delivery-truck.png" alt=""></i>
+            <span class="padding-top-half text-align-center text-color-gray" style="font-size: 12px;">Dikirim</span>
+          </a>
         </div>
       </div>
+    </div>    
+    <div class="list links-list">
+      <ul>
+        <li>
+          <div class="item-content">
+            <div class="item-media"><i class="f7-icons icon padding-left-half">gear_alt</i></div>
+            <div class="item-inner">
+              <div class="item-title">Pengaturan Akun</div>
+            </div>
+          </div>
+        </li>
+        <li><a href="/account-profil-saya/" class="text-color-gray" style="font-size: 12px;">Profil Saya</a></li>
+        <li><a href="/account-alamat-saya/" class="text-color-gray" style="font-size: 12px;">Alamat Saya</a></li>
+        <li><a href="/account-ubah-password/" class="text-color-gray" style="font-size: 12px;">Ubah Password</a></li>
+        <li class="padding-horizontal"><button class="button button-fill color-red">LOGOUT</button></li>
+      </ul>
     </div>
   </div>
 </div>
