--- a/src/pages/static-page-join-reseller.f7.html
+++ b/src/pages/static-page-join-reseller.f7.html
@@ -21,15 +21,30 @@
           </a>
         </div>
       </div>
+    </div>
+    <div class="toolbar tabbar toolbar-top">
+      <div class="toolbar-inner">
+        <a href="#tab-1" class="tab-link tab-link-active">Indonesia</a>
+        <a href="#tab-2" class="tab-link">English</a>
+      </div>
+    </div>
+    <div class="tabs-swipeable-wrap">
+      <div class="tabs">
+        <div id="tab-1" class="page-content tab tab-active">
+          <div class="block text-align-justify">
+            <p>content tab 1</p>
+          </div>
+        </div>
+        <div id="tab-2" class="page-content tab">
+          <div class="block text-align-justify">
+            <p>content tab 2</p>
+          </div>
+        </div>
+      </div>
     </div>   
-    <div class="page-content"></div>
   </div>
 </template>
-<style>
-  /* p {
-    margin: 10px 0;
-  } */
-</style>
+<style></style>
 <script>
   export default {
     // Lifecycle Hooks
@@ -41,7 +56,8 @@
       let router = this.$router;
       let pageName = this.$route.params.pageName;
       let page = $$('.page[data-name="static-page-join-reseller"]');
-      let pageContent = page.find('.page-content');
+      let pageContentIn = page.find('#tab-1 p');
+      let pageContentUs = page.find('#tab-2 p');
 
       console.log( pageName );
 
@@ -55,26 +71,8 @@
 
       // get content join reseller
       app.request.getJSON(`https://m.anakhebatindonesia.com/profil/1`, function (data) {
-        pageContent.html(`
-          <div class="toolbar tabbar toolbar-top" style="position:fixed">
-            <div class="toolbar-inner">
-              <a href="#tab-1" class="tab-link tab-link-active">Indonesia</a>
-              <a href="#tab-2" class="tab-link">English</a>
-            </div>
-          </div>
-          <div class="tabs" style="margin: -5em 0em -5em 0em !important;">
-            <div id="tab-1" class="page-content tab tab-active">
-              <div class="block text-align-justify">
-                <p>${data.data.content.in}</p>
-              </div>
-            </div>
-            <div id="tab-2" class="page-content tab">
-              <div class="block text-align-justify">
-                <p>${data.data.content.us}</p>
-              </div>
-            </div>
-          </div>       
-        `);
+        pageContentIn.html(`${data.data.content.in}`);
+        pageContentUs.html(`${data.data.content.us}`);
         app.preloader.hide();
       });
       
