fix::informasi point reward halaman point reward

--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -47,7 +47,7 @@
           </a>
         </div>
         <div class="row margin-top">
-          <a href="/page/reward#Point Reward" class="col" style="display: grid;">
+          <a href="/point-reward/" class="col" style="display: grid;">
             <i class="icon f7-icons" style="width: auto;">gift</i>
             <span class="text-align-center">Reward</span>
           </a>
